[#386] Limits answer bundle size in query command processor
[#421] Use an optional proxy parameter to filter QueryAnswers with zeroed importance
[#433] Build a dynamic lib with all the libs from all the packages and add it to lib/das.os
[#418] Implement remote error handling across peers in the ServiceBus
[#505] Add a strength value to QueryAnswer
[#511] Create a Properties class in commons by moving and renaming CustomAttributesMap from AtomDB package